update 29mrt2026